# cloud

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .kanelrc.cjs  .prettierignore  README.md  app.d.ts  bun.lockb  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  go.mod  justfile  main.tf  next.config.js  package.json  pnpm-lock.yaml  sst.config.ts  tailwind.config.base.ts  tailwind.config.ts  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS
.husky/: commit-msg
client/: README.md  pyproject.toml  setup.py
docker/: .dockerignore  Dockerfile  dev.Dockerfile  prod.Dockerfile
docs/: cloud-glossary.md
drizzle/: 0000_amazing_santa_claus.sql  0000_ancient_mongu.sql  0000_bent_firebird.sql  0000_brave_morbius.sql  0000_brown_black_cat.sql  0000_certain_black_crow.sql  0000_cheerful_guardian.sql  0000_classy_sally_floyd.sql  0000_clever_sentry.sql  0000_cold_alex_power.sql  0000_complete_moondragon.sql  0000_curved_wolf_cub.sql  0000_dark_human_fly.sql  0000_early_peter_quill.sql  0000_easy_baron_zemo.sql  0000_even_maelstrom.sql  0000_fair_bruce_banner.sql  0000_familiar_big_bertha.sql  0000_flat_rafael_vega.sql  0000_glossy_lockheed.sql  0000_left_post.sql  0000_little_smiling_tiger.sql  0000_luxuriant_sue_storm.sql  0000_magenta_chronomancer.sql  (+22 more)
sdks/python/flojoy-cloud/: pyproject.toml  scalar.py
sdks/python/flojoy-cloud/flojoy_cloud/: __init__.py  client.py  dtypes.py  measurement.py  mtypes.py  test_sequencer.py  watch.py
sdks/python/flojoy-cloud/tests/: cloud_test.py  sequencer_export_test.py
(+1145 files in other folders)
